Relayout frames after AsyncFrameScrolling or FrameFlattening option is changed https://bugs.webkit.org/show_bug.cgi?id=183081

Patch by Frederic Wang <fwang@igalia.com> on 2018-02-27
Reviewed by Antonio Gomes.

Add a test to check whether an iframe changes its flattening status after one of the option
AsyncFrameScrolling/FrameFlattening is enabled/disabled.

* platform/ios-simulator/TestExpectations: Remove failure.
* platform/ios/fast/frames/flattening/iframe-flattening-async-frame-scrolling-dynamic-expected.txt: Added.
* platform/ios/fast/frames/flattening/iframe-flattening-async-frame-scrolling-dynamic.html: Added.

Canonical link: https://commits.webkit.org/198872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229060 268f45cc-cd09-0410-ab3c-d52691b4dbfc