Source/WebCore/page/SettingsBase.h
@@ -164,6 +164,7 @@ protected:
 
     // Helpers used by generated Settings.cpp.
     void setNeedsRecalcStyleInAllFrames();
+    void setNeedsRelayoutAllFrames();
     void mediaTypeOverrideChanged();
     void imagesEnabledChanged();
     void scriptEnabledChanged();
